fixed padding on small width screens

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -449,7 +449,7 @@ button {
 
     .photo-img-container {
         padding-bottom: 50px;
-        padding-top: 50px;
+        padding-top: 0;
         border-bottom: 2px solid var(--main-bg-color);
     }
 
